--- a/src/jclitenet/packages.config
+++ b/src/jclitenet/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
+  <package id="jQuery" version="1.10.2" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
@@ -10,6 +12,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Optimization" version="1.0.0-beta" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
