--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
-*.dll
-http/App_Code/Content.cshtml
+
+#ignore thumbnails created by windows
+Thumbs.db
+#Ignore files build by Visual Studio
+*.csproj
+*.obj
+*.exe
 *.pdb
-*.pdb
-*.pdb
-*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+*.lib
+*.sbr
+*TemporaryGeneratedFile_*
+Projects/**/bin/Debug/
+Projects/**/Obj/
+Projects/**/obj/
+Projects/**/TempPE/
+Projects/**/bin/
+Projects/**/bin/Release/
+bin/
+Debug/
+TempPE/
+!libraries/**
+!**/src/packages/**
+!**/packages/**
+!*/src/packages/**
+!src/packages/**
+!src/packages/*
+!*/packages/*
+!**/Dependencies/**
