--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,12 @@
-
-#ignore thumbnails created by windows
-Thumbs.db
-#Ignore files build by Visual Studio
-*.obj
+src/packages*/
+packages*/
+packages/
+Publish/
 *.exe
-*.pdb
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.tlb
-*.tlh
-*.bak
-*.cache
-*.ilk
-*.log
-*.lib
-*.sbr
-*TemporaryGeneratedFile_*
-Projects/**/bin/Debug/
-Projects/**/Obj/
-Projects/**/obj/
-Projects/**/TempPE/
-Projects/**/bin/
-Projects/**/bin/Release/
-bin/
-Debug/
-TempPE/
-!libraries/**
-!**/src/packages/**
-!**/packages/**
-!*/src/packages/**
-!src/packages/**
-!src/packages/*
-!*/packages/*
-!**/Dependencies/**
+!NuGet.exe
+obj
+bin
+debug
+release
+obj
+dll
