--- a/src/CoreFramework4/packages.config
+++ b/src/CoreFramework4/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
+  <package id="FluentValidation" version="5.5.0.0" targetFramework="net451" />
+  <package id="FluentValidation.MVC5" version="5.5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
 </packages>
