--- a/src/jclitenet/bin/jclitenet.dll.config
+++ b/src/jclitenet/bin/jclitenet.dll.config
@@ -30,7 +30,15 @@
   -->
   <system.web>
     <httpRuntime />
-    <compilation debug="true" targetFramework="4.5.1" />
+    <compilation debug="true" targetFramework="4.5.1">
+      <assemblies>
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>    
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -39,6 +47,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="System.Web.WebPages.Razor" />
         <add namespace="System.Web.Optimization" />
         <add namespace="jclitenet" />
         <add namespace="jclitenet.Models" />
@@ -68,7 +77,7 @@
   </system.net>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <staticContent>
+    <staticContent> 
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
       <remove fileExtension=".svg" />
@@ -99,11 +108,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -114,8 +127,8 @@
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+        <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
