--- a/src/CoreFramework4.Spa.Resources/CoreFramework4.Spa.Resources.csproj
+++ b/src/CoreFramework4.Spa.Resources/CoreFramework4.Spa.Resources.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Content Include="assets\css\app.css" />
     <Content Include="assets\css\base.css" />
-    <Content Include="assets\css\foundation.min.css" />
+    <Content Include="assets\css\bootstrap-custom.css" />
+    <Content Include="assets\css\media.css" />
     <Content Include="assets\css\normalize.css" />
+    <Content Include="assets\js\appState.js" />
     <Content Include="assets\js\app.js" />
     <Content Include="assets\js\appRun.js" />
     <Content Include="assets\js\constants\app-constants.js" />
@@ -60,6 +62,7 @@
     <Content Include="assets\js\lib\angular\angular-csp.css" />
     <Content Include="assets\js\lib\angular\angular-loader.js" />
     <Content Include="assets\js\lib\angular\angular-loader.min.js" />
+    <Content Include="assets\js\lib\angular\angular-messages.min.js" />
     <Content Include="assets\js\lib\angular\angular-mocks.js" />
     <Content Include="assets\js\lib\angular\angular-resource.js" />
     <Content Include="assets\js\lib\angular\angular-resource.min.js" />
@@ -70,9 +73,12 @@
     <Content Include="assets\js\lib\angular\angular-scenario.js" />
     <Content Include="assets\js\lib\angular\angular-touch.js" />
     <Content Include="assets\js\lib\angular\angular-touch.min.js" />
+    <Content Include="assets\js\lib\angular\angular-ui-router.js" />
+    <Content Include="assets\js\lib\angular\angular-ui-router.min.js" />
     <Content Include="assets\js\lib\angular\angular.js" />
     <Content Include="assets\js\lib\angular\angular.min.js" />
     <Content Include="assets\js\lib\domReady.js" />
+    <Content Include="assets\js\lib\jquery\jquery-1.11.3.min.js" />
     <Content Include="assets\js\lib\jquery\jquery-2.1.1.intellisense.js" />
     <Content Include="assets\js\lib\jquery\jquery-2.1.1.js" />
     <Content Include="assets\js\lib\jquery\jquery-2.1.1.min.js" />
@@ -81,19 +87,30 @@
     <Content Include="assets\js\lib\q\q.min.js" />
     <Content Include="assets\js\lib\require\r.js" />
     <Content Include="assets\js\lib\require\require.js" />
-    <Content Include="assets\js\lib\underscore\underscore.js" />
-    <Content Include="assets\js\lib\underscore\underscore.min.js" />
+    <Content Include="assets\js\lib\underscore\underscore-min.js" />
     <Content Include="assets\js\main.js" />
     <Content Include="assets\js\modules\module-controller.js" />
     <Content Include="assets\js\modules\module-service.js" />
     <Content Include="assets\js\routes.js" />
     <Content Include="assets\js\services\authentication-service.js" />
-    <Content Include="assets\js\services\base-service.js" />
     <Content Include="assets\js\services\tutorial-service.js" />
+    <Content Include="assets\js\utilities\utilities.js" />
     <Content Include="assets\views\index.html" />
     <Content Include="assets\views\login.html" />
     <Content Include="assets\views\tutorials\createtutorial.html" />
+    <Content Include="assets\views\partial\tutorials.html" />
     <Content Include="assets\views\tutorials\tutorial.html" />
+    <Content Include="Icon.png" />
+    <Content Include="Scripts\angular-cookies.js" />
+    <Content Include="Scripts\angular-cookies.min.js" />
+    <Content Include="Scripts\angular-loader.js" />
+    <Content Include="Scripts\angular-loader.min.js" />
+    <Content Include="Scripts\angular-resource.js" />
+    <Content Include="Scripts\angular-resource.min.js" />
+    <Content Include="Scripts\angular-sanitize.js" />
+    <Content Include="Scripts\angular-sanitize.min.js" />
+    <Content Include="Scripts\angular-ui-router.js" />
+    <Content Include="Scripts\angular-ui-router.min.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\js\lib\angular\angular-animate.min.js.map" />
@@ -103,10 +120,14 @@
     <None Include="assets\js\lib\angular\angular-route.min.js.map" />
     <None Include="assets\js\lib\angular\angular-sanitize.min.js.map" />
     <None Include="assets\js\lib\angular\angular-touch.min.js.map" />
-    <None Include="assets\js\lib\angular\angular.min.js.map" />
     <None Include="assets\js\lib\angular\errors.json" />
     <None Include="assets\js\lib\angular\version.json" />
     <None Include="assets\js\lib\jquery\jquery-2.1.1.min.map" />
+    <None Include="packages.config" />
+    <None Include="Scripts\angular-cookies.min.js.map" />
+    <None Include="Scripts\angular-loader.min.js.map" />
+    <None Include="Scripts\angular-resource.min.js.map" />
+    <None Include="Scripts\angular-sanitize.min.js.map" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
