--- a/src/CoreFramework4/packages.config
+++ b/src/CoreFramework4/packages.config
@@ -5,6 +5,12 @@
   <package id="FluentValidation.MVC5" version="5.5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net451" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net451" />
+  <package id="StructureMap.DependencyResolver" version="1.0.0" targetFramework="net451" />
 </packages>
