--- a/src/jclitenet/packages.config
+++ b/src/jclitenet/packages.config
@@ -18,6 +18,8 @@
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
   <package id="recaptcha" version="1.0.5.0" targetFramework="net451" />
   <package id="RecaptchaNet" version="1.6.0" targetFramework="net451" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net451" />
+  <package id="StructureMap.DependencyResolver" version="1.0.0" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
