--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CoreFramework4.Spa.Resources\packages.config" />
   <repository path="..\CoreFramework4\packages.config" />
   <repository path="..\jclitenet\packages.config" />
 </repositories>
