--- a/src/CoreFramework4.Spa.Resources/CoreFramework4.Spa.Resources.csproj
+++ b/src/CoreFramework4.Spa.Resources/CoreFramework4.Spa.Resources.csproj
@@ -43,11 +43,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\css\animation.css" />
     <Content Include="assets\css\app.css" />
     <Content Include="assets\css\base.css" />
     <Content Include="assets\css\bootstrap-custom.css" />
     <Content Include="assets\css\media.css" />
     <Content Include="assets\css\normalize.css" />
+    <Content Include="assets\images\profile-bg.png" />
+    <Content Include="assets\images\upload\2cbf4fb7e2823ce69b932954b163cf93.png" />
     <Content Include="assets\js\appState.js" />
     <Content Include="assets\js\app.js" />
     <Content Include="assets\js\appRun.js" />
@@ -55,6 +58,7 @@
     <Content Include="assets\js\controllers\home-controller.js" />
     <Content Include="assets\js\controllers\login-controller.js" />
     <Content Include="assets\js\controllers\tutorial-controller.js" />
+    <Content Include="assets\js\directives\headerFixed.js" />
     <Content Include="assets\js\lib\angular\angular-animate.js" />
     <Content Include="assets\js\lib\angular\angular-animate.min.js" />
     <Content Include="assets\js\lib\angular\angular-cookies.js" />
@@ -78,10 +82,8 @@
     <Content Include="assets\js\lib\angular\angular.js" />
     <Content Include="assets\js\lib\angular\angular.min.js" />
     <Content Include="assets\js\lib\domReady.js" />
-    <Content Include="assets\js\lib\jquery\jquery-1.11.3.min.js" />
-    <Content Include="assets\js\lib\jquery\jquery-2.1.1.intellisense.js" />
-    <Content Include="assets\js\lib\jquery\jquery-2.1.1.js" />
-    <Content Include="assets\js\lib\jquery\jquery-2.1.1.min.js" />
+    <Content Include="assets\js\lib\jquery\jquery-2.1.3.js" />
+    <Content Include="assets\js\lib\jquery\jquery-2.1.3.min.js" />
     <Content Include="assets\js\lib\modernizr\modernizr-2.8.3.js" />
     <Content Include="assets\js\lib\q\q.js" />
     <Content Include="assets\js\lib\q\q.min.js" />
@@ -89,6 +91,7 @@
     <Content Include="assets\js\lib\require\require.js" />
     <Content Include="assets\js\lib\underscore\underscore-min.js" />
     <Content Include="assets\js\main.js" />
+    <Content Include="assets\js\modules\module-directive.js" />
     <Content Include="assets\js\modules\module-controller.js" />
     <Content Include="assets\js\modules\module-service.js" />
     <Content Include="assets\js\routes.js" />
@@ -122,12 +125,14 @@
     <None Include="assets\js\lib\angular\angular-touch.min.js.map" />
     <None Include="assets\js\lib\angular\errors.json" />
     <None Include="assets\js\lib\angular\version.json" />
-    <None Include="assets\js\lib\jquery\jquery-2.1.1.min.map" />
     <None Include="packages.config" />
     <None Include="Scripts\angular-cookies.min.js.map" />
     <None Include="Scripts\angular-loader.min.js.map" />
     <None Include="Scripts\angular-resource.min.js.map" />
     <None Include="Scripts\angular-sanitize.min.js.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="assets\js\factory\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
