--- a/src/CoreFramework4/CoreFramework4.csproj
+++ b/src/CoreFramework4/CoreFramework4.csproj
@@ -34,6 +34,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.4.0.4\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
@@ -138,6 +141,7 @@
     <Compile Include="Implementations\Services\AuthenticationService.cs" />
     <Compile Include="Implementations\Services\CommentService.cs" />
     <Compile Include="Implementations\Services\MailService.cs" />
+    <Compile Include="Implementations\Services\ObjectMappings.cs" />
     <Compile Include="Implementations\Services\TutorialService.cs" />
     <Compile Include="Infrastructure\Repository\IGameRepository.cs" />
     <Compile Include="Infrastructure\Services\IMailService.cs" />
