--- a/src/jclitenet.Domain.Objects/jclitenet.Domain.Objects.csproj
+++ b/src/jclitenet.Domain.Objects/jclitenet.Domain.Objects.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Poco\Resume.cs" />
+    <Compile Include="Poco\ResumeDetails.cs" />
+    <Compile Include="Poco\SimpleValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Poco\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
