--- a/src/CoreFramework4/packages.config
+++ b/src/CoreFramework4/packages.config
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="FluentValidation" version="5.5.0.0" targetFramework="net451" />
   <package id="FluentValidation.MVC5" version="5.5.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net451" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net451" />
   <package id="StructureMap.DependencyResolver" version="1.0.0" targetFramework="net451" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
