--- a/src/jclitenet/Web.config
+++ b/src/jclitenet/Web.config
@@ -16,9 +16,6 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="recaptchaPublicKey" value="6LcREfMSAAAAAOnq5_KAHco9Uht2QMtOEYt7xI5A" />
     <add key="recaptchaPrivateKey" value="6LcREfMSAAAAAFGKW8lgFO9W4h1n6eP15Pcj_D3r" />
-    <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
-    <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
-    <add key="MvcSiteMapProvider_IncludeAssembliesForScan" value="jclitenet" />
   </appSettings>
   <!-- 
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -51,10 +48,6 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="jclitenet" />
         <add namespace="jclitenet.Models" />
-        <!--<add namespace="MvcSiteMapProvider.Web.Html"/>
-        <add namespace="MvcSiteMapProvider.Web.Html.Models"/>-->
-        <add namespace="MvcSiteMapProvider.Web.Html" />
-        <add namespace="MvcSiteMapProvider.Web.Html.Models" />
       </namespaces>
     </pages>
     <authentication mode="Forms">
@@ -133,6 +126,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="5.2.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
